Add base layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
+<html lang="ja">
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+    <meta charset="utf-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <title>ゴッドイーター オフィシャルウェブ | バンダイナムコエンターテインメント公式サイト</title>
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ゴッドイーター オフィシャルウェブ | バンダイナムコエンターテインメント公式サイト">
+    <meta name="twitter:description" content="『GOD EATER』シリーズ公式サイト！ゴッドイーターの最新情報はここから！">
+    <meta name="twitter:image" content="/ogp.png">
+    <meta name="twitter:url" content="https://www.godeater.jp/">
+
+    <meta property="og:title" content="ゴッドイーター オフィシャルウェブ | バンダイナムコエンターテインメント公式サイト">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/ogp.png">
+    <meta property="og:url" content="https://www.godeater.jp/">
+    <meta property="og:site_name" content="ゴッドイーター オフィシャルウェブ | バンダイナムコエンターテインメント公式サイト">
+    <meta property="og:description" content="『GOD EATER』シリーズ公式サイト！ゴッドイーターの最新情報はここから！">
+
+    <meta name="keywords" content="GOD EATER,ゴッドイーター,GE,ゲーム,ファンクラブ,PS4,レゾナントオプス">
+    <meta name="description" content="『GOD EATER』シリーズ公式サイト！ゴッドイーターの最新情報はここから！">
+    <link rel="apple-touch-icon" href="/webclip.png">
+    <link rel="icon" href="/favicon.ico">
   </head>
-  <body>
+  <body class="relative m-0 p-0 font-body text-[1.3rem] leading-normal md:text-[1.6rem] md:min-w-[1200px]">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
